# simple-playgrounds-epuck

./: .gitignore  README.md  demo.avi  pyproject.toml
client/: agent.py  behavior.py  demo.ipynb  new-notebook.ipynb  notebook.ipynb  requester.py  simulator.py  simulator_interface.py
server/: app.py  interactions.py  server.py  services.py  spg_mock.py
server/controllers/: remote_controller.py
test/: test_services.py
