[tool.poetry]
name = "spg-epuck"
version = "0.1.0"
description = ""
authors = ["Paul Lorgue <paullorgue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
matplotlib = "^3.5.1"
opencv-contrib-python = "^4.5.5"
numpy = "^1.22.3"
requests = "^2.27.1"
simple_playgrounds = { git = "https://github.com/gaorkl/simple-playgrounds.git" }
ipykernel = "^6.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
